Avoid wrapping nav tabs on mobile
For pages where the page needs to reload, the active tab may now be out
of view. We use JS to scroll it into view if necessary.

We also add spiffy scroll snap behaviour.

--- a/peachjam/static/stylesheets/_variables.scss
+++ b/peachjam/static/stylesheets/_variables.scss
@@ -3,6 +3,8 @@ $font-size-base: 0.875rem !default;
 
 $h1-font-size: $font-size-base * 2.25 !default;
 
+$nav-tabs-border-width: 0px;
+
 //Colors
 $facebook-color: #1A77F2 !default;
 $twitter-color: #2AA1F2 !default;
